# discord_rust_playground

./: .env.schema  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  playground.rs
src/playground/: mod.rs  remote_test_result.txt
