[package]
name = "discord_rust_playground"
version = "0.1.0"
authors = ["vlakreeh <riverserver2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["json"] }
thiserror = "1.0.4"
serde_json = "1.0.41"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
regex = "1.3.1"
async-trait = "0.1.33"

[dependencies.tokio]
version = "0.2.21"
features = ["macros", "test-util"]

[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity"
branch = "await"
