[package]
name = "discord_rust_playground"
version = "0.2.0"
authors = ["vlakreeh <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.4"
serde_json = "1.0.41"
dotenv = "0.15.0"
regex = "1.3.1"
globset = "0.4.5"

[dependencies.tokio]
version = "0.2.21"
features = ["macros", "test-util"]

[dependencies.reqwest]
version = "0.10.6"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
version = "0.9.0-rc.2"
features = ["framework", "standard_framework"]
