[package]
name = "discord_rust_playground"
version = "0.2.0"
authors = ["vlakreeh <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
serde_json = "1.0.64"
dotenv = "0.15.0"
regex = "1.4.5"
globset = "0.4.6"

[dependencies.tokio]
version = "1.5.0"
features = ["rt", "macros", "test-util", "rt-multi-thread"]

[dependencies.reqwest]
version = "0.11.3"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
version = "0.10.5"
features = ["framework", "standard_framework"]
